RESOLVED FIXED70122
REGRESSION(r97248): :visited as descendant selector broken
https://bugs.webkit.org/show_bug.cgi?id=70122
Summary REGRESSION(r97248): :visited as descendant selector broken
Antti Koivisto
Reported 2011-10-14 11:34:52 PDT
Attachments
patch (8.57 KB, patch)
2011-10-18 04:02 PDT, Antti Koivisto
webkit.review.bot: commit-queue-
made the test a render tree dump as computedStyleIncludingVisitedInfo is poorly supported across platforms (10.29 KB, patch)
2011-10-18 05:23 PDT, Antti Koivisto
zimmermann: review+
It doesn't appear to be fixed. Test in attachment still fails. (570 bytes, text/html)
2011-10-25 12:57 PDT, Brad
no flags
Antti Koivisto
Comment 1 2011-10-18 04:02:22 PDT
WebKit Review Bot
Comment 2 2011-10-18 04:38:50 PDT
Comment on attachment 111419 [details] patch Attachment 111419 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/10125219 New failing tests: fast/selectors/visited-descendant.html
Antti Koivisto
Comment 3 2011-10-18 05:23:15 PDT
Created attachment 111426 [details] made the test a render tree dump as computedStyleIncludingVisitedInfo is poorly supported across platforms
Nikolas Zimmermann
Comment 4 2011-10-18 05:34:55 PDT
Comment on attachment 111426 [details] made the test a render tree dump as computedStyleIncludingVisitedInfo is poorly supported across platforms I'm not an expert in that area, but it looks reasonable to me, given that it breaks no other test and fixes a regression :-)
Antti Koivisto
Comment 5 2011-10-18 05:57:31 PDT
Antti Koivisto
Comment 6 2011-10-23 06:35:25 PDT
*** Bug 70470 has been marked as a duplicate of this bug. ***
Brad
Comment 7 2011-10-25 12:57:58 PDT
Created attachment 112379 [details] It doesn't appear to be fixed. Test in attachment still fails. If I have a span inside an anchor ("A" element), it's color is ignored when the anchor becomes visited. See well-reduced attachment.
Antti Koivisto
Comment 8 2011-10-25 14:20:21 PDT
Please file a separate bug.
Note You need to log in before you can comment on or make changes to this bug.