REGRESSION(r97248): :visited as descendant selector broken https://bugs.webkit.org/show_bug.cgi?id=70122

Source/WebCore:

Reviewed by Nikolas Zimmerman.

Make ":visited foo" and similar selectors work correctly again. They can affect
the visited style of an element inside a visited link.

Test: fast/selectors/visited-descendant.html

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::applyDeclarations):

    Apply visited style to children of visited links too.

* css/SelectorChecker.cpp:
(WebCore::SelectorChecker::checkSelector):

    Don't disable visited matching until we run into first ancestor link or use combinator other than child/descendant.

(WebCore::SelectorChecker::determineLinkMatchType):

    Look into child/descendant component selectors too to determine the link match type.

LayoutTests:

Reviewed by Nikolas Zimmerman.

* fast/selectors/visited-descendant.html: Added.
* platform/mac/fast/selectors/visited-descendant-expected.txt: Added.



Canonical link: https://commits.webkit.org/86466@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97745 268f45cc-cd09-0410-ab3c-d52691b4dbfc